force-app/main/default/objects/Opportunity/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to support Hubspot migration. Created by CK Ext. 221</description>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>