force-app/main/default/objects/Opportunity/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <label>Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care Navigation</fullName>
            </value>
            <value>
                <fullName>Portal Integration</fullName>
            </value>
            <value>
                <fullName>Patient Intake and Registration</fullName>
            </value>
            <value>
                <fullName>Self-Scheduling</fullName>
            </value>
            <value>
                <fullName>Appointment Reminders</fullName>
            </value>
            <value>
                <fullName>Payment Collection</fullName>
            </value>
            <value>
                <fullName>Patient and Clinician Tools (Virtual Visit)</fullName>
            </value>
            <value>
                <fullName>Video or Audio Visit (Virtual Visit)</fullName>
            </value>
            <value>
                <fullName>Patient Visit Feedback</fullName>
            </value>
            <value>
                <fullName>Patient Scheduling</fullName>
            </value>
            <value>
                <fullName>Triage and Patient Routing</fullName>
            </value>
            <value>
                <fullName>Patient and Clinician Chat</fullName>
            </value>
            <value>
                <fullName>Patient Information Review</fullName>
            </value>
            <value>
                <fullName>Multi-Party Visit</fullName>
            </value>
            <value>
                <fullName>Insights and Care Coordination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>