force-app/main/default/objects/Opportunity/fields/Needs__c.field-meta.xml
<CustomField>
    <fullName>Needs__c</fullName>
    <label>Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>