force-app/main/default/objects/Opportunity/fields/Non_standard_Items__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Items__c</fullName>
    <label>Non-standard Items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term for Convenience</fullName>
            </value>
            <value>
                <fullName>Escalated fee schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>