force-app/main/default/objects/Opportunity/fields/Original_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Date__c</fullName>
    <inlineHelpText>First Contract ever signed with the Prospect</inlineHelpText>
    <label>Original Contract Date</label>
    <type>Date</type>
</CustomField>