force-app/main/default/objects/Opportunity/fields/Original_Source_Data_2__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Data_2__c</fullName>
    <description>Additional information about the original source for the associated contact, or associated company if there is no contact, with the oldest value for the Time first seen property. Created by CK Ext. 221</description>
    <label>Original Source Data 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>