force-app/main/default/objects/Opportunity/fields/PO_Populated__c.field-meta.xml
<CustomField>
    <fullName>PO_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Populated</label>
    <type>Checkbox</type>
</CustomField>