force-app/main/default/objects/Opportunity/fields/Pricing_Approval_SLT_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Approval_SLT_Signoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Approval SLT Signoff</label>
    <type>Checkbox</type>
</CustomField>