force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>The project type required for this opportunity. Created by CK Ext.221</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Marketing Campaign</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Contract Creation</fullName>
            </value>
            <value>
                <fullName>PSG (Custom Work)</fullName>
            </value>
            <value>
                <fullName>Add Provider</fullName>
            </value>
            <value>
                <fullName>ePrescribe</fullName>
            </value>
            <value>
                <fullName>Platform Training</fullName>
            </value>
            <value>
                <fullName>Stripe Update</fullName>
            </value>
            <value>
                <fullName>Rebrand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>