force-app/main/default/objects/Opportunity/fields/Proposal_Budget_Alignments__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Budget_Alignments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal/Budget Alignments</label>
    <type>Checkbox</type>
</CustomField>