force-app/main/default/objects/Opportunity/fields/Reference_name__c.field-meta.xml
<CustomField>
    <fullName>Reference_name__c</fullName>
    <label>Reference name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>