force-app/main/default/objects/Opportunity/fields/SalesLoft1__Most_Recent_Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__Most_Recent_Cadence_Name__c</fullName>
    <description>Most recent SalesLoft Cadence of Primary Contact associated with Opportunity.</description>
    <label>Most Recent Cadence - Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>