force-app/main/default/objects/Opportunity/fields/SalesLoft1__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Contact Associated with Opportunity.</description>
    <label>SalesLoft Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Primary Contact</relationshipLabel>
    <relationshipName>Opportunity_Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>