force-app/main/default/objects/Opportunity/fields/SDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDR Owner of this Opportunity. Created by CK Ext. 221</description>
    <label>SDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>