force-app/main/default/objects/Opportunity/fields/SDR_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner_Email__c</fullName>
    <label>SDR Owner Email</label>
    <type>Email</type>
</CustomField>