force-app/main/default/objects/Opportunity/fields/Secondary_owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>