force-app/main/default/objects/Opportunity/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <description>SOE Information. Created by CK Ext. 221</description>
    <label>SOE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>