force-app/main/default/objects/Opportunity/fields/Solution_consultant__c.field-meta.xml
<CustomField>
    <fullName>Solution_consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>