force-app/main/default/objects/Opportunity/fields/Specialties__c.field-meta.xml
<CustomField>
    <fullName>Specialties__c</fullName>
    <inlineHelpText>In which department(s) are the prospect planning to use eVisit?</inlineHelpText>
    <label>Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Hospital Medicine</fullName>
            </value>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Ob/Gyn</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Behavioral (Psychiatry)</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Other(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>