force-app/main/default/objects/Opportunity/fields/texcellency__DefHC_HospitalID__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_HospitalID__c</fullName>
    <description>ID of the hospital to which this RFP belongs to</description>
    <label>Definitive ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>