force-app/main/default/objects/Opportunity/fields/texcellency__DefHC_RFPID__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_RFPID__c</fullName>
    <description>RFP Identifier in the DefinitiveHC database.</description>
    <label>RFP ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>