force-app/main/default/objects/Opportunity/fields/Total_contract_value__c.field-meta.xml
<CustomField>
    <fullName>Total_contract_value__c</fullName>
    <description>The total contract value (TCV) of this deal. Created by CK Ext. 221</description>
    <label>Total contract value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>