force-app/main/default/objects/Opportunity/fields/Total_Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Weighted_Amount__c</fullName>
    <description>Total Weighted Amount + Implementation Fee</description>
    <formula>ExpectedRevenue  +  Implementation_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Weighted Amount + Implementation Fee</inlineHelpText>
    <label>Total Weighted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>