force-app/main/default/objects/Opportunity/fields/Total_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Year_1__c</fullName>
    <description>ARR + Implementation Fee</description>
    <formula>ARR__c  +  Implementation_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Year 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>