force-app/main/default/objects/Opportunity/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Care</fullName>
            </value>
            <value>
                <fullName>Specialty Care</fullName>
            </value>
            <value>
                <fullName>ED Teletriage</fullName>
            </value>
            <value>
                <fullName>ED Telepsychiatry</fullName>
            </value>
            <value>
                <fullName>Provider to Provider Consultations</fullName>
            </value>
            <value>
                <fullName>Virtual Urgent Care</fullName>
            </value>
            <value>
                <fullName>Oncology Virtual Care</fullName>
            </value>
            <value>
                <fullName>Telestroke</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Virtual Nursing</fullName>
            </value>
            <value>
                <fullName>Tele-ICU</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Correctional Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>