force-app/main/default/objects/Opportunity/fields/Workflow_Diagram__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Diagram__c</fullName>
    <label>Workflow Diagram</label>
    <type>Url</type>
</CustomField>