force-app/main/default/objects/Opportunity/fields/Workflow_Diagram_SLT_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Diagram_SLT_Signoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Workflow Diagram SLT Signoff</label>
    <type>Checkbox</type>
</CustomField>