force-app/main/default/objects/Opportunity/fields/X2024_Commitment__c.field-meta.xml
<CustomField>
    <fullName>X2024_Commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2024 Deal Landscape?</label>
    <type>Checkbox</type>
</CustomField>