force-app/main/default/objects/Opportunity/recordTypes/Cross_Sell.recordType-meta.xml
<RecordType>
    <fullName>Cross_Sell</fullName>
    <active>true</active>
    <businessProcess>eVisit Sales</businessProcess>
    <description>Used for new Cross Sell Opportunities</description>
    <label>Cross Sell</label>
</RecordType>