force-app/main/default/objects/Opportunity/recordTypes/Cross_Sell_Federal.recordType-meta.xml
<RecordType>
    <fullName>Cross_Sell_Federal</fullName>
    <active>true</active>
    <businessProcess>eVisit Sales</businessProcess>
    <label>Cross Sell (Federal)</label>
</RecordType>