force-app/main/default/objects/Opportunity/recordTypes/New_Sale.recordType-meta.xml
<RecordType>
    <fullName>New_Sale</fullName>
    <active>true</active>
    <businessProcess>eVisit Sales</businessProcess>
    <description>Process for New Sales</description>
    <label>New Sale</label>
</RecordType>