force-app/main/default/objects/Opportunity/recordTypes/New_Sale_Federal.recordType-meta.xml
<RecordType>
    <fullName>New_Sale_Federal</fullName>
    <active>true</active>
    <businessProcess>eVisit Sales</businessProcess>
    <label>New Sale (Federal)</label>
</RecordType>