force-app/main/default/objects/Opportunity/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <businessProcess>eVisit Sales</businessProcess>
    <label>Renewal</label>
</RecordType>