force-app/main/default/objects/Opportunity/recordTypes/Renewal_Federal.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Federal</fullName>
    <active>true</active>
    <businessProcess>eVisit Sales</businessProcess>
    <label>Renewal (Federal)</label>
</RecordType>