force-app/main/default/objects/Opportunity/recordTypes/Up_Sell.recordType-meta.xml
<RecordType>
    <fullName>Up_Sell</fullName>
    <active>true</active>
    <businessProcess>eVisit Sales</businessProcess>
    <description>Used for new Up Sell Opportunities</description>
    <label>Up Sell</label>
</RecordType>