force-app/main/default/objects/Opportunity/recordTypes/Up_Sell_Federal.recordType-meta.xml
<RecordType>
    <fullName>Up_Sell_Federal</fullName>
    <active>true</active>
    <businessProcess>eVisit Sales</businessProcess>
    <label>Up Sell (Federal)</label>
</RecordType>