force-app/main/default/objects/Opportunity/validationRules/Required_CLReason_when_Stage_is_CL.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_CLReason_when_Stage_is_CL</fullName>
    <active>false</active>
    <description>User must select the closed Lost reason, when they try to change the opportunity stage to closed Lost</description>
    <errorConditionFormula>AND(
  OR(
   ISPICKVAL( StageName, &quot;Closed Lost&quot;),
   ISPICKVAL( StageName, &quot;Disqualified&quot;)
  ),
ISBLANK(TEXT( Loss_Reason__c ))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please select Closed Lost reason to proceed further.</errorMessage>
</ValidationRule>