force-app/main/default/objects/Opportunity/validationRules/Severity_required_loss_product.validationRule-meta.xml
<ValidationRule>
    <fullName>Severity_required_loss_product</fullName>
    <active>true</active>
    <description>User must select the Customer Severity when change the opportunity stage to closed Lost and Loss Reason is Product Feature Missing</description>
    <errorConditionFormula>AND(
  OR(
   ISPICKVAL(Loss_Reason__c, &quot;Product Feature Missing&quot;)
  ),
ISBLANK(TEXT(Customer_Severity__c))
)</errorConditionFormula>
    <errorDisplayField>Customer_Severity__c</errorDisplayField>
    <errorMessage>Please select 1-5 to denote impact of lack of feature on decision not to move forward</errorMessage>
</ValidationRule>