force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ARR__c</columns>
    <columns>Implementation_Fee__c</columns>
    <columns>Total_Year_1__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>Use_Case__c</columns>
    <columns>Total_Weighted_Amount__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.New_Sale</value>
    </filters>
    <label>All Opportunities</label>
    <sharedTo>
        <group>Sales_Team</group>
    </sharedTo>
</ListView>